refactor: update the dark mode

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -1,5 +1,6 @@
 {
     "back-button": "Back",
+    "dark-mode": "Dark mode",
     "login": {
         "title": "LOGIN",
         "user-placeholder": "Enter your username",
